--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "express-ts",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Express + Typescript Template",
+  "main": "app.js",
   "scripts": {
-    "dev": "nodemon app.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "cross-env NODE_ENV=production && npm run build && node dist/app.js",
+    "dev": "cross-env NODE_ENV=dev nodemon app.ts",
+    "build": "tsc",
+    "format": "eslint . --fix"
   },
   "keywords": [],
   "author": "",
@@ -13,10 +15,16 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.0",
+    "@typescript-eslint/parser": "^5.30.0",
+    "eslint": "^8.18.0",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4"
   },
   "dependencies": {
+    "axios": "^0.27.2",
+    "cross-env": "^7.0.3",
+    "dotenv": "^16.0.1",
     "express": "^4.18.1"
   }
 }
