--- a/package.json
+++ b/package.json
@@ -1,30 +1,44 @@
 {
   "name": "express-ts",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Express + Typescript Template",
   "main": "app.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=production && npm run build && node dist/app.js",
+    "start": "cross-env NODE_ENV=production && pnpm build && node dist/app.js",
     "dev": "cross-env NODE_ENV=dev nodemon app.ts",
     "build": "tsc",
-    "format": "eslint . --fix"
+    "lint": "pnpm eslint && pnpm prettier",
+    "eslint": "eslint \"./**/*.{ts,js,d.ts}\" --fix",
+    "prettier": "prettier --write ."
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "backend",
+    "nodejs",
+    "express",
+    "typescript"
+  ],
+  "author": "Andy Lien",
   "license": "ISC",
   "devDependencies": {
-    "@types/express": "^4.17.13",
-    "@types/node": "^18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.30.0",
-    "@typescript-eslint/parser": "^5.30.0",
-    "eslint": "^8.18.0",
-    "ts-node": "^10.8.1",
-    "typescript": "^4.7.4"
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.5",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "@typescript-eslint/parser": "^6.16.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-prettier": "^5.1.2",
+    "nodemon": "^3.0.2",
+    "prettier": "^3.1.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
-    "axios": "^0.27.2",
+    "axios": "^1.6.3",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
-    "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2"
   }
 }
